testing_workspace/ATR_0226-194419/gcc.txt
ATR_0226-194419/add.c: In function ‘main’:
ATR_0226-194419/add.c:7:3: warning: implicit declaration of function ‘asm’ [-Wimplicit-function-declaration]
    7 |   asm (
      |   ^~~
ATR_0226-194419/add.c:9:26: error: expected ‘)’ before ‘:’ token
    9 |       "mov $2, %%ebx\n\t"                 // load 2 into ebx
      |                          ^
      |                          )
......
   18 |       :                               // Outputs
      |       ~                   
ATR_0226-194419/add.c:22:5: warning: implicit declaration of function ‘usleep’; did you mean ‘sleep’? [-Wimplicit-function-declaration]
   22 |     usleep(25000);
      |     ^~~~~~
      |     sleep
